Fixed z-index problem of sidebar

--- a/style.css
+++ b/style.css
@@ -505,7 +505,6 @@ ol {
   top: 0rem;
   left: 0rem;
 
-
   transform: translateX(-100%);
 
   padding: 3rem;
@@ -619,6 +618,8 @@ Filter
     padding: 0;
 
     box-shadow: 0rem 0rem rgba(0, 0, 0, 0);
+
+    z-index: auto !important;
   }
 
 }
